--- a/index.html
+++ b/index.html
@@ -1,1 +1,123 @@
-index.html
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+<meta charset="UTF-8">
+<title>Calendário Notion</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background: transparent;
+    margin: 0;
+    padding: 10px;
+  }
+  .calendar {
+    width: 280px;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    padding: 15px;
+    background: #ffffff;
+  }
+  .calendar-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  .calendar-header button {
+    background: none;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+  }
+  .calendar-days, .calendar-dates {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    text-align: center;
+  }
+  .calendar-days div {
+    font-weight: bold;
+    font-size: 12px;
+    margin-bottom: 5px;
+  }
+  .calendar-dates div {
+    padding: 6px;
+    border-radius: 6px;
+    margin: 2px;
+  }
+  .today {
+    background: #3b82f6;
+    color: #fff;
+    font-weight: bold;
+  }
+</style>
+</head>
+<body>
+
+<div class="calendar">
+  <div class="calendar-header">
+    <button onclick="prevMonth()">‹</button>
+    <div id="monthYear"></div>
+    <button onclick="nextMonth()">›</button>
+  </div>
+
+  <div class="calendar-days">
+    <div>Dom</div><div>Seg</div><div>Ter</div>
+    <div>Qua</div><div>Qui</div><div>Sex</div><div>Sáb</div>
+  </div>
+
+  <div class="calendar-dates" id="calendarDates"></div>
+</div>
+
+<script>
+let date = new Date();
+
+function renderCalendar() {
+  const monthYear = document.getElementById("monthYear");
+  const dates = document.getElementById("calendarDates");
+  dates.innerHTML = "";
+
+  const year = date.getFullYear();
+  const month = date.getMonth();
+
+  const months = [
+    "Janeiro","Fevereiro","Março","Abril","Maio","Junho",
+    "Julho","Agosto","Setembro","Outubro","Novembro","Dezembro"
+  ];
+
+  monthYear.textContent = `${months[month]} ${year}`;
+
+  const firstDay = new Date(year, month, 1).getDay();
+  const lastDate = new Date(year, month + 1, 0).getDate();
+  const today = new Date();
+
+  for (let i = 0; i < firstDay; i++) {
+    dates.innerHTML += "<div></div>";
+  }
+
+  for (let d = 1; d <= lastDate; d++) {
+    const isToday =
+      d === today.getDate() &&
+      month === today.getMonth() &&
+      year === today.getFullYear();
+
+    dates.innerHTML += `<div class="${isToday ? 'today' : ''}">${d}</div>`;
+  }
+}
+
+function prevMonth() {
+  date.setMonth(date.getMonth() - 1);
+  renderCalendar();
+}
+
+function nextMonth() {
+  date.setMonth(date.getMonth() + 1);
+  renderCalendar();
+}
+
+renderCalendar();
+</script>
+
+</body>
+</html>
+
