Fix HTML entity encoding in index.html

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
     margin-bottom: 5px;
   }
   .calendar-dates div {
+  background: #f1f5f9;
+}
     padding: 6px;
     border-radius: 6px;
     margin: 2px;
@@ -120,4 +122,5 @@ renderCalendar();
 
 </body>
 </html>
+
 
